final repository clean

--- a/analysis/prediction/artefact_classification/feature_engineering-RF.ipynb
+++ b/analysis/prediction/artefact_classification/feature_engineering-RF.ipynb
@@ -8,7 +8,7 @@
     "${\\Large \\text{Pierre Guilmin}}$  \n",
     "$\\text{December 2018}$\n",
     "\n",
-    "**Goal:** This notebook aims to compare different set of features (without a group, new features, ...) with a given algorithm (GradientBoosting), to perform artefact vs somatic mutations classification.\n",
+    "**Goal:** This notebook aims to compare different set of features (without a group, new features, ...) with a given algorithm (RandomForest), to perform artefact vs somatic mutations classification.\n",
     "\n",
     "This notebook is divided in 6 parts:\n",
     "* **1. Get the data**\n",
@@ -194,7 +194,7 @@
     }
    ],
    "source": [
-    "job_baseline = Selene_Job('ferf_baseline', 'guilminp', '/home/guilminp/impact-annotator_v2/analysis/prediction/artefact_classification/ssh_remote_jobs', 'ssh_remote_jobs', load_from_id=True)"
+    "job_baseline = Selene_Job('ferf_baseline', load_from_id=True)"
    ]
   },
   {
@@ -276,7 +276,7 @@
     }
    ],
    "source": [
-    "job_baseline.run(n_jobs=20, short_job=True)"
+    "job_baseline.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -1158,7 +1158,7 @@
    "source": [
     "for job in job_list.values():\n",
     "    print_md('**{}**'.format(job.job_id))\n",
-    "    job.run(n_jobs=20, short_job=True)"
+    "    job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -1642,7 +1642,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -2106,9 +2106,9 @@
     }
    ],
    "source": [
-    "job_1.run(n_jobs=20, short_job=True)\n",
-    "job_2.run(n_jobs=20, short_job=True)\n",
-    "job_3.run(n_jobs=20, short_job=True)"
+    "job_1.run(n_jobs=25, short_job=True)\n",
+    "job_2.run(n_jobs=25, short_job=True)\n",
+    "job_3.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -2560,7 +2560,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -2860,7 +2860,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -3159,7 +3159,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -3423,7 +3423,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -3812,7 +3812,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -4334,7 +4334,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -4923,7 +4923,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -5069,7 +5069,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe the same conclusions than the same notebook run with Gradient Boosting."
+    "We observe the same conclusions than in the same notebook run with Gradient Boosting `feature_engineering.ipynb`."
    ]
   }
  ],
