--- a/analysis/prediction/artefact_classification/feature_engineering.ipynb
+++ b/analysis/prediction/artefact_classification/feature_engineering.ipynb
@@ -283,7 +283,7 @@
     }
    ],
    "source": [
-    "job_baseline.run(n_jobs=20, short_job=True)"
+    "job_baseline.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -1165,7 +1165,7 @@
    "source": [
     "for job in job_list.values():\n",
     "    print_md('**{}**'.format(job.job_id))\n",
-    "    job.run(n_jobs=20, short_job=True)"
+    "    job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -1649,7 +1649,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -1968,9 +1968,9 @@
     }
    ],
    "source": [
-    "job_1.run(n_jobs=20, short_job=True)\n",
-    "job_2.run(n_jobs=20, short_job=True)\n",
-    "job_3.run(n_jobs=20, short_job=True)"
+    "job_1.run(n_jobs=25, short_job=True)\n",
+    "job_2.run(n_jobs=25, short_job=True)\n",
+    "job_3.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -2422,7 +2422,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -2729,7 +2729,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -3035,7 +3035,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -3407,7 +3407,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -3773,7 +3773,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -4301,7 +4301,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -4897,7 +4897,7 @@
     }
    ],
    "source": [
-    "job.run(n_jobs=20, short_job=True)"
+    "job.run(n_jobs=25, short_job=True)"
    ]
   },
   {
@@ -5043,15 +5043,156 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The optimal set of features is:\n"
+    "The optimal set of features is:\n",
+    "- NGS:\n",
+    "    - `t_depth`\n",
+    "    - `t_vaf`\n",
+    "    - `t_alt_count`\n",
+    "    - `n_depth`\n",
+    "    - `n_vaf`\n",
+    "    - `n_alt_count`\n",
+    "    - `t_ref_plus_count`\n",
+    "    - `t_ref_neg_count`\n",
+    "    - `t_alt_plus_count`\n",
+    "    - `t_alt_neg_count`\n",
+    "    - `sample_coverage`\n",
+    "    \n",
+    "\n",
+    "- genome:\n",
+    "    - `Chromosome`\n",
+    "    - `VEP_VARIANT_CLASS`\n",
+    "\n",
+    "\n",
+    "- freq:\n",
+    "    - `frequency_in_normals`\n",
+    "\n",
+    "\n",
+    "- somatic-driver:\n",
+    "    - `VEP_COSMIC_CNT`\n",
+    "    - `is_a_hotspot`\n",
+    "    - `is_a_3d_hotspot`\n",
+    "    - `oncogenic`\n",
+    "\n",
+    "\n",
+    "- consequence:\n",
+    "    - `gene_type`\n",
+    "    - `VEP_Consequence`\n",
+    "    - `VEP_IMPACT`\n",
+    "    - `VEP_CLIN_SIG`\n",
+    "    - `VEP_SIFT_class`\n",
+    "    - `VEP_PolyPhen_class`\n",
+    "\n",
+    "\n",
+    "- AF:\n",
+    "    - `VEP_gnomAD_AF`\n",
+    "    - `VEP_in_dbSNP`\n",
+    "\n",
+    "\n",
+    "- new features:\n",
+    "    - `strand_ratio`\n",
+    "    - `base_change`\n",
+    "    - `reduced_VEP_SYMBOL`\n",
+    "    \n",
+    "    \n",
+    "⚠️ For the sake of simplicity the 3-base change feature wasn't incorporated but it has proven to be better than a simple base-change feature."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following function adds the three new features to an `ImpactWrapper` object and return the optimal list of features:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def add_optimal_features_artefact_classification(data):\n",
+    "    \"\"\"\n",
+    "    Compute the optimal set of features from the end of `feature_engineering.ipynb` and return the optimal list of features.\n",
+    "    → Arguments:\n",
+    "        - data: an ImpactWrapper object\n",
+    "    \"\"\"\n",
+    "    # strand_ratio\n",
+    "    dd = data.impact[['t_alt_neg_count', 't_alt_plus_count']].min(axis=1) / data.impact[['t_alt_neg_count', 't_alt_plus_count']].max(axis=1)\n",
+    "    data.add_features('strand_ratio', dd, False)\n",
+    "    \n",
+    "    \n",
+    "    # base_change\n",
+    "    def switch_base(base):\n",
+    "        if base == 'G':\n",
+    "            return 'C'\n",
+    "        elif base == 'C':\n",
+    "            return 'G'\n",
+    "        elif base == 'A':\n",
+    "            return 'T'\n",
+    "        elif base == 'T':\n",
+    "            return 'A'\n",
+    "\n",
+    "    def get_base_change(mutation):\n",
+    "        if mutation['VEP_VARIANT_CLASS'] != 'SNV':\n",
+    "            return 'not_SNV'\n",
+    "        else:\n",
+    "            ref = mutation['Reference_Allele']\n",
+    "            alt = mutation['Tumor_Seq_Allele2']\n",
+    "\n",
+    "            if mutation['Reference_Allele'] == 'G' or mutation['Reference_Allele'] == 'A' :\n",
+    "                ref = switch_base(ref)\n",
+    "                alt = switch_base(alt)\n",
+    "\n",
+    "            return '{}>{}'.format(ref, alt)\n",
+    "\n",
+    "    dd = data.impact.apply(get_base_change, axis=1)\n",
+    "    data.add_features('base_change', dd, True)\n",
+    "    \n",
+    "    \n",
+    "    # reduced_VEP_SYMBOL\n",
+    "    gene_table = get_table(data.impact['VEP_SYMBOL'])\n",
+    "    gene_table = gene_table[gene_table['count_'] >= 1000]\n",
+    "\n",
+    "    def get_reduced_gene(gene):\n",
+    "        if gene in gene_table.index:\n",
+    "            return gene\n",
+    "        else:\n",
+    "            return 'other'\n",
+    "\n",
+    "    dd = data.impact['VEP_SYMBOL'].apply(get_reduced_gene)\n",
+    "    data.add_features('reduced_VEP_SYMBOL', dd, True)\n",
+    "    \n",
+    "    \n",
+    "    # features list\n",
+    "    features = [\n",
+    "    \n",
+    "        # NGS\n",
+    "        't_depth', 't_vaf', 't_alt_count',\n",
+    "        'n_depth', 'n_vaf', 'n_alt_count',\n",
+    "        't_ref_plus_count', 't_ref_neg_count', 't_alt_plus_count', 't_alt_neg_count',\n",
+    "        'sample_coverage',\n",
+    "\n",
+    "        # genome\n",
+    "        'Chromosome', 'VEP_VARIANT_CLASS',\n",
+    "\n",
+    "        # freq\n",
+    "        'frequency_in_normals',\n",
+    "\n",
+    "        # somatic-driver\n",
+    "        'VEP_COSMIC_CNT', 'is_a_hotspot', 'is_a_3d_hotspot', 'oncogenic',\n",
+    "\n",
+    "        # consequence\n",
+    "        'gene_type', 'VEP_Consequence', 'VEP_IMPACT', 'VEP_CLIN_SIG', 'VEP_SIFT_class', 'VEP_PolyPhen_class',\n",
+    "\n",
+    "        # AF\n",
+    "        'VEP_gnomAD_AF', 'VEP_in_dbSNP',\n",
+    "\n",
+    "        # new features\n",
+    "        'strand_ratio', 'base_change', 'reduced_VEP_SYMBOL'\n",
+    "    ]\n",
+    "    \n",
+    "    return (features)"
+   ]
   }
  ],
  "metadata": {
