--- a/analysis/prediction/artefact_classification/final_algorithm_comparison.ipynb
+++ b/analysis/prediction/artefact_classification/final_algorithm_comparison.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -79,72 +79,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# strand_ratio\n",
-    "dd = data.impact[['t_alt_neg_count', 't_alt_plus_count']].min(axis=1) / data.impact[['t_alt_neg_count', 't_alt_plus_count']].max(axis=1)\n",
-    "data.add_features('strand_ratio', dd, False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# base_change\n",
-    "def switch_base(base):\n",
-    "    if base == 'G':\n",
-    "        return 'C'\n",
-    "    elif base == 'C':\n",
-    "        return 'G'\n",
-    "    elif base == 'A':\n",
-    "        return 'T'\n",
-    "    elif base == 'T':\n",
-    "        return 'A'\n",
-    "\n",
-    "def get_base_change(mutation):\n",
-    "    if mutation['VEP_VARIANT_CLASS'] != 'SNV':\n",
-    "        return 'not_SNV'\n",
-    "    else:\n",
-    "        ref = mutation['Reference_Allele']\n",
-    "        alt = mutation['Tumor_Seq_Allele2']\n",
-    "        \n",
-    "        \n",
-    "        if mutation['Reference_Allele'] == 'G' or mutation['Reference_Allele'] == 'A' :\n",
-    "            ref = switch_base(ref)\n",
-    "            alt = switch_base(alt)\n",
-    "        \n",
-    "        return '{}>{}'.format(ref, alt)\n",
-    "    \n",
-    "dd = data.impact.apply(get_base_change, axis=1)\n",
-    "data.add_features('base_change', dd, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# reduced_VEP_SYMBOL\n",
-    "gene_table = get_table(data.impact['VEP_SYMBOL'])\n",
-    "gene_table = gene_table[gene_table['count_'] >= 1000]\n",
-    "\n",
-    "def get_reduced_gene(gene):\n",
-    "    if gene in gene_table.index:\n",
-    "        return gene\n",
-    "    else:\n",
-    "        return 'other'\n",
-    "\n",
-    "dd = data.impact['VEP_SYMBOL'].apply(get_reduced_gene)\n",
-    "data.add_features('reduced_VEP_SYMBOL', dd, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
@@ -153,7 +87,7 @@
      "output_type": "stream",
      "text": [
       "29\n",
-      "X: (225022, 133) | y: (225022,)\n"
+      "X: (225022, 183) | y: (225022,)\n"
      ]
     },
     {
@@ -207,33 +141,90 @@
     }
    ],
    "source": [
-    "features = [\n",
+    "def add_optimal_features_artefact_classification(data):\n",
+    "    \"\"\"\n",
+    "    Compute the optimal set of features from the end of `feature_engineering.ipynb` and return the optimal list of features.\n",
+    "    → Arguments:\n",
+    "        - data: an ImpactWrapper object\n",
+    "    \"\"\"\n",
+    "    # strand_ratio\n",
+    "    dd = data.impact[['t_alt_neg_count', 't_alt_plus_count']].min(axis=1) / data.impact[['t_alt_neg_count', 't_alt_plus_count']].max(axis=1)\n",
+    "    data.add_features('strand_ratio', dd, False)\n",
     "    \n",
-    "    # NGS\n",
-    "    't_depth', 't_vaf', 't_alt_count',\n",
-    "    'n_depth', 'n_vaf', 'n_alt_count',\n",
-    "    't_ref_plus_count', 't_ref_neg_count', 't_alt_plus_count', 't_alt_neg_count',\n",
-    "    'sample_coverage',\n",
     "    \n",
-    "    # genome\n",
-    "    'Chromosome', 'VEP_VARIANT_CLASS',\n",
-    "    \n",
-    "    # freq\n",
-    "    'frequency_in_normals',\n",
-    "    \n",
-    "    # somatic-driver\n",
-    "    'VEP_COSMIC_CNT', 'is_a_hotspot', 'is_a_3d_hotspot', 'oncogenic',\n",
+    "    # base_change\n",
+    "    def switch_base(base):\n",
+    "        if base == 'G':\n",
+    "            return 'C'\n",
+    "        elif base == 'C':\n",
+    "            return 'G'\n",
+    "        elif base == 'A':\n",
+    "            return 'T'\n",
+    "        elif base == 'T':\n",
+    "            return 'A'\n",
     "\n",
-    "    # consequence\n",
-    "    'gene_type', 'VEP_Consequence', 'VEP_IMPACT', 'VEP_CLIN_SIG', 'VEP_SIFT_class', 'VEP_PolyPhen_class',\n",
+    "    def get_base_change(mutation):\n",
+    "        if mutation['VEP_VARIANT_CLASS'] != 'SNV':\n",
+    "            return 'not_SNV'\n",
+    "        else:\n",
+    "            ref = mutation['Reference_Allele']\n",
+    "            alt = mutation['Tumor_Seq_Allele2']\n",
     "\n",
-    "    # AF\n",
-    "    'VEP_gnomAD_AF', 'VEP_in_dbSNP',\n",
+    "            if mutation['Reference_Allele'] == 'G' or mutation['Reference_Allele'] == 'A' :\n",
+    "                ref = switch_base(ref)\n",
+    "                alt = switch_base(alt)\n",
+    "\n",
+    "            return '{}>{}'.format(ref, alt)\n",
+    "\n",
+    "    dd = data.impact.apply(get_base_change, axis=1)\n",
+    "    data.add_features('base_change', dd, True)\n",
     "    \n",
-    "    # new features\n",
-    "    'strand_ratio', 'base_change', 'reduced_VEP_SYMBOL'\n",
-    "]\n",
+    "    \n",
+    "    # reduced_VEP_SYMBOL\n",
+    "    gene_table = get_table(data.impact['VEP_SYMBOL'])\n",
+    "    gene_table = gene_table[gene_table['count_'] >= 1000]\n",
     "\n",
+    "    def get_reduced_gene(gene):\n",
+    "        if gene in gene_table.index:\n",
+    "            return gene\n",
+    "        else:\n",
+    "            return 'other'\n",
+    "\n",
+    "    dd = data.impact['VEP_SYMBOL'].apply(get_reduced_gene)\n",
+    "    data.add_features('reduced_VEP_SYMBOL', dd, True)\n",
+    "    \n",
+    "    \n",
+    "    # features list\n",
+    "    features = [\n",
+    "    \n",
+    "        # NGS\n",
+    "        't_depth', 't_vaf', 't_alt_count',\n",
+    "        'n_depth', 'n_vaf', 'n_alt_count',\n",
+    "        't_ref_plus_count', 't_ref_neg_count', 't_alt_plus_count', 't_alt_neg_count',\n",
+    "        'sample_coverage',\n",
+    "\n",
+    "        # genome\n",
+    "        'Chromosome', 'VEP_VARIANT_CLASS',\n",
+    "\n",
+    "        # freq\n",
+    "        'frequency_in_normals',\n",
+    "\n",
+    "        # somatic-driver\n",
+    "        'VEP_COSMIC_CNT', 'is_a_hotspot', 'is_a_3d_hotspot', 'oncogenic',\n",
+    "\n",
+    "        # consequence\n",
+    "        'gene_type', 'VEP_Consequence', 'VEP_IMPACT', 'VEP_CLIN_SIG', 'VEP_SIFT_class', 'VEP_PolyPhen_class',\n",
+    "\n",
+    "        # AF\n",
+    "        'VEP_gnomAD_AF', 'VEP_in_dbSNP',\n",
+    "\n",
+    "        # new features\n",
+    "        'strand_ratio', 'base_change', 'reduced_VEP_SYMBOL'\n",
+    "    ]\n",
+    "    \n",
+    "    return (features)\n",
+    "\n",
+    "features = add_optimal_features_artefact_classification(data)\n",
     "print(len(features))\n",
     "\n",
     "X, y = data.process(features).get_X_and_y('all', 'all')\n",
@@ -242,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1457,7 @@
        "140005                       1.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2855,7 +2846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2906,14 +2897,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Writing ssh_remote_jobs/job_fac_RandomForest/script.ipy\n"
+      "Overwriting ssh_remote_jobs/job_fac_RandomForest/script.ipy\n"
      ]
     }
    ],
@@ -2947,7 +2938,7 @@
     "pipe = make_pipeline(RandomUnderSampler(ratio='majority', random_state=42),\n",
     "                     RandomForestClassifier(random_state=42))\n",
     "model = GridSearchCV(pipe, parameters_grid, cv=nested_cv_strategy, scoring='roc_auc', refit=True, return_train_score=True)\n",
-    "metrics = Metrics(model, X, y, cv_strategy, n_jobs=5)\n",
+    "metrics = Metrics(model, X, y, cv_strategy, n_jobs=20)\n",
     "\n",
     "# save the metrics\n",
     "print('Save metrics...', end='')\n",
